--- a/index.html
+++ b/index.html
@@ -9,10 +9,41 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;1,500&family=Roboto+Mono:wght@500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+<!--banner section starts here-->
     <section class="banner">
         <div class="banner-text">
             <h1>let's help those who are <br> more in need</h1>
             <p>Donate Today connects nonprofits, donors, and companies in nearly <br> every country in the world. We help fellow nonprofits access the funding, <br> tools, training, and support they need to serve their communities.</p>
+            <button>donate now</button>
+        </div>
+    </section>
+<!--banner section ends-->
+
+<!--donate section starts-->
+    <section class="donate">
+        <div class="donate-head">
+            <h1>donate today</h1>
+            <p>your contribution can make a family smile. Many needy people around our country needs help. <br> let's make them smile together.</p>
+        </div>
+        <div class="money">
+            <div class="amount">
+                <h3>100tk</h3>
+            </div>
+            <div class="amount two">
+                <h3>200tk</h3>
+            </div>
+            <div class="amount">
+                <h3>500tk</h3>
+            </div>
+            <div class="amount">
+                <h3>1000tk</h3>
+            </div>
+            <div class="amount">
+                <h3>5000tk</h3>
+            </div>
+        </div>
+        <div class="other">
+            <input type="number" name="" id="" placeholder="Other Amount (Taka)"> <br>
             <button>donate now</button>
         </div>
     </section>
