--- a/index.html
+++ b/index.html
@@ -47,5 +47,31 @@
             <button>donate now</button>
         </div>
     </section>
+<!--donate section ends here-->
+
+<!--plan section starts here-->
+    <section class="plan">
+        <div class="donate-head">
+            <h1>our donate plan</h1>
+            <p> we have multiple donation plans. you can donate to buy food for a family or building a shelter for them. <br> you can also donate for child educaion and international relief funds</p>
+        </div>
+        <div class="card">
+            <div class="inner-card first">
+                <img src="icons/food.png" alt="">
+                <h3>food for a family</h3>
+                <p>Donate money to buy food for a family. <br> this will help us to feed and help many <br> hungry people around the country</p>
+            </div>
+            <div class="inner-card second">
+                <img src="icons/shelter.png" alt="">
+                <h3>shelter for a family</h3>
+                <p>Donate money to build shelter for a family. <br> this will  help us to give a roof to many <br> homeless people around the country</p>
+            </div>
+            <div class="inner-card third">
+                <img src="icons/Frame-1.png" alt="">
+                <h3>education for a child</h3>
+                <p>Donate money to make a child educated. <br> this will childrens are future of a country <br> let's make them grow</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
