--- a/index.html
+++ b/index.html
@@ -73,5 +73,33 @@
             </div>
         </div>
     </section>
+    <!--plan section ends here-->
+
+    <!--international section starts here-->
+    <section class="international">
+        <div class="int-head">
+            <h1>our international funds</h1>
+        </div>
+        <div class="thumb">
+            <div class="in-thumb">
+                <h4>ukraine</h4>
+                <p>ukraine crysis reliefe fund</p>
+            </div>
+            <div class="in-thumb one">
+                <h4>somalia</h4>
+                <p>east africa hunger reliefe fund</p>
+            </div>
+            <div class="in-thumb three">
+                <h4>Afghanisthan</h4>
+                <p>afghanistan emergency fund</p>
+            </div>
+            <div class="in-thumb four">
+                <h4>united states</h4>
+                <p>hope in crysis fund</p>
+            </div>
+        </div>
+    </section>
+    
+
 </body>
 </html>
