--- a/index.html
+++ b/index.html
@@ -99,7 +99,19 @@
             </div>
         </div>
     </section>
+ <!--international section ends here-->
     
+<!--update section starts here-->
+    <section class="update">
+        <div class="up-text">
+            <h1>get our update</h1>
+        <p>subscribe us for newslatter and stay connected. this will <br> help you to get our every updates.</p>
+        </div>
+        <div class="mail">
+            <input type="text" name="" id="">
+            <button>subscribe</button>
+        </div>
+    </section>
 
 </body>
 </html>
