--- a/index.html
+++ b/index.html
@@ -112,6 +112,14 @@
             <button>subscribe</button>
         </div>
     </section>
+<!--update section ends here-->
 
+<!--footer section starts here-->
+    <section class="footer">
+        <div class="foot-text">
+            <h3>site made by <span class="cap">abid rahman</span></h3>
+            <p>copyright 2022</p>
+        </div>
+    </section>
 </body>
 </html>
